stars resolution small fix

--- a/css/style.css
+++ b/css/style.css
@@ -188,24 +188,22 @@ body{
 
     .reviews .review-box{
         margin: 0;
-        flex-direction: row;
-        justify-content: flex-start;
+        /* flex-direction: row;
+        justify-content: flex-start; */
+        
         margin-bottom: 10px;
         margin-top: 20px;
         height: 60px;
-        /* width: 85%; */
     }
 
     .review-box .stars{
-        margin: 0;
-        padding: 0;
         margin-top: 5px;
         margin-right: 20px;
         margin-left: 20px;
     }
 
     .review-box p{
-        margin-right: 2em;
+        margin-bottom: 2em;
     }
 
     .reviews .top{
@@ -244,5 +242,44 @@ body{
     .testimonials .right{
         margin-top: 40px;
         margin-bottom: -20px;
+    }
+}
+
+@media (min-width: 1244px){
+    .reviews .review-box{
+        margin: 0;
+        flex-direction: row;
+        justify-content: flex-start;
+        
+        margin-bottom: 10px;
+        margin-top: 20px;
+        height: 60px;
+    }
+
+    .review-box .stars{
+        margin: 0;
+        padding: 0;
+        margin-top: 5px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+
+    .review-box p{
+        margin: 0;
+        margin-right: 2em;
+    }
+
+    .reviews .top{
+        margin-right: 80px;
+    }
+
+    .reviews .mid{
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    .reviews .bot{
+        margin-left: 80px;
+        margin-right: 0;
     }
 }
